--- a/src/ports/unix/Makefile
+++ b/src/ports/unix/Makefile
@@ -16,9 +16,10 @@ UNAME_S := $(shell uname -s)
 # include py core make definitions
 include $(TOP)/py/py.mk
 
-INC +=  -I.
-INC +=  -I$(TOP)
+INC += -I.
+INC += -I$(TOP)
 INC += -I$(BUILD)
+INC += -I./nsport
 
 # compiler settings
 CWARN = -Wall -Werror
@@ -166,18 +167,38 @@ LIB_SRC_C += $(addprefix lib/,\
 	)
 
 # ns modules
-NS_SRC_C += $(addprefix ns/modules/,\
+NSMOD_SRC_C += $(addprefix ns/modules/,\
+    autostart.c \
     hello.c \
+    init.c \
     modns.c \
+    process.c \
     )
+
+NSPORT_SRC_C += $(addprefix nsport/,\
+    clock.c \
+    int-master.c \
+    platform.c \
+    random.c \
+    rtimer-arch.c \
+    slip-arch.c \
+    watchdog.c \
+    )
+
+# include unix project-conf for network stack
+CFLAGS += -DPROJECT_CONF_PATH=\"project-conf.h\"
 
 OBJ = $(PY_O)
 OBJ += $(addprefix $(BUILD)/, $(SRC_C:.c=.o))
 OBJ += $(addprefix $(BUILD)/, $(LIB_SRC_C:.c=.o))
-OBJ += $(addprefix $(BUILD)/, $(NS_SRC_C:.c=.o))
+OBJ += $(addprefix $(BUILD)/, $(NSMOD_SRC_C:.c=.o))
+OBJ += $(addprefix $(BUILD)/, $(NSPORT_SRC_C:.c=.o))
+
+# include ns networking core makefile
+include ../../ns/ns.mk
 
 # List of sources for qstr extraction
-SRC_QSTR += $(SRC_C) $(LIB_SRC_C) $(NS_SRC_C)
+SRC_QSTR += $(SRC_C) $(LIB_SRC_C) $(NSMOD_SRC_C)
 # Append any auto-generated sources that are needed by sources listed in
 # SRC_QSTR
 SRC_QSTR_AUTO_DEPS +=
