--- a/src/ports/unix/Makefile
+++ b/src/ports/unix/Makefile
@@ -168,13 +168,13 @@ LIB_SRC_C += $(addprefix lib/,\
 
 # ns modules
 NSMOD_SRC_C += $(addprefix ns/modules/,\
-    autostart.c \
     clock.c \
     hello.c \
     init.c \
     modns.c \
     process.c \
     unix.c \
+    test/timer.c \
     )
 
 NSPORT_SRC_C += $(addprefix nsport/,\
