[ns] add unix uart ports and ns_log api

--- a/src/ports/unix/Makefile
+++ b/src/ports/unix/Makefile
@@ -187,6 +187,7 @@ NSPORT_SRC_C += $(addprefix nsport/,\
     rtimer-arch.c \
     slip-arch.c \
     system.c \
+    uart.c \
     watchdog.c \
     )
 
