[ns] add coap test code

--- a/src/ports/unix/Makefile
+++ b/src/ports/unix/Makefile
@@ -179,6 +179,12 @@ NSMOD_SRC_C += $(addprefix ns/modules/,\
     cli/cli.c \
     )
 
+NSMOD_SRC_C += $(addprefix ns/modules/test/coap/,\
+    client/coap-client.c \
+    server/resources/res-hello.c \
+    server/coap-server.c \
+    )
+
 NSPORT_SRC_C += $(addprefix nsport/,\
     clock.c \
     int-master.c \
