[ns] integrate coap with cli, coap client server ep is configurable, and coap get message is configurable

--- a/src/ports/unix/Makefile
+++ b/src/ports/unix/Makefile
@@ -179,8 +179,7 @@ NSMOD_SRC_C += $(addprefix ns/modules/,\
     cli/cli.c \
     )
 
-NSMOD_SRC_C += $(addprefix ns/modules/test/coap/,\
-    client/coap-client.c \
+NSMOD_SRC_C += $(addprefix ns/modules/cli/coap/,\
     server/resources/res-hello.c \
     server/coap-server.c \
     )
