[ns] implement coap resource and etimer modules

--- a/src/ports/unix/Makefile
+++ b/src/ports/unix/Makefile
@@ -170,6 +170,7 @@ LIB_SRC_C += $(addprefix lib/,\
 NSMOD_SRC_C += $(addprefix ns/modules/,\
     clock.c \
     coap-res.c \
+    etimer.c \
     hello.c \
     init.c \
     modns.c \
