[ns] change ns to nespy module in mpconfigport.h

--- a/src/ports/unix/Makefile
+++ b/src/ports/unix/Makefile
@@ -168,7 +168,7 @@ LIB_SRC_C += $(addprefix lib/,\
 
 # Nespy source files
 NSLIBPY_SRC_C += $(addprefix ns/lib/py/,\
-    mod-ns.c \
+    mod-nespy.c \
     nstd.c \
 	obj-clock.c \
 	obj-coap.c \
